Fixed border issue on mobile, as well as some text re-wording.

--- a/pure-layout-marketing/css/layouts/marketing.css
+++ b/pure-layout-marketing/css/layouts/marketing.css
@@ -44,6 +44,11 @@ label {
     border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 
+.l-box-lrg-top {
+    padding: 2em;
+    border-top: 1px solid rgba(0,0,0,0.1);
+}
+
 .is-center {
     text-align: center;
 }
